--- a/Day3/index.html
+++ b/Day3/index.html
@@ -5,16 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="variable.js"></script>
-    <script src="datatypes.js"></script>
   </head>
   <body>
-    <script>
-      // comments can make code readable
-
-      // Welcome to 30DaysOfJavaScript
-
-      /*Comments can make code readable, easy to reuse and informative */
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
