--- a/Pro1/index.htm
+++ b/Pro1/index.htm
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <section class="rating background">
+    <section class="rating box">
       <div class="star">
         <img src="images/icon-star.svg" alt="" />
       </div>
@@ -39,14 +39,14 @@
       </div>
       <button class="submit">submit</button>
     </section>
-    <section class="result background">
+    <section class="result box">
       <div class="img">
         <img src="images/illustration-thank-you.svg" alt="" />
       </div>
-      <div>
+      <div class="ratingnum">
         <p>You selected <span>4</span> out of 5</p>
       </div>
-      <div class="text">
+      <div class="text text2">
         <h1>Thank you!</h1>
         <p>
           We appreciate you taking the time to give a rating. If you ever need
